2008-11-12  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_new): Remove a deprecated GLib symbol.
	(Closes: #560448)

2008-11-10  Cosimo Cecchi  <cosimoc@gnome.org>

	* browser-plugin/totem-glow-button.h:
	* src/backend/bacon-resize.h:
	* src/backend/bacon-video-widget.h:
	* src/ev-sidebar.h:
	* src/plugins/properties/bacon-video-widget-properties.h:
	* src/plugins/skipto/totem-skipto.h:
	* src/plugins/totem-plugins-engine.c:
	* src/totem-audio-preview.c:
	* src/totem-object.c:
	* src/totem-open-location.h:
	* src/totem-playlist.h:
	* src/totem-preferences.c:
	* src/totem-resources.c:
	* src/totem-screenshot.h:
	* src/totem-statusbar.c:
	* src/totem-statusbar.h:
	* src/totem-time-label.h:
	* src/totem-uri.h:
	* src/totem-video-indexer.c:
	Use single GTK+/GLib includes.

2008-11-10  Josselin Mouette  <joss@malsain.org>

	* data/totem.1: right arrow skips 60 seconds, not 15.

2008-11-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c (got_time_tick):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_tick_send): Patch by Robin Stocker
	<robin@nibor.org> to fix the inverted logic in the "is_live_stream"
	calculation, fixes local files being stopped instead of paused
	(Closes: #559078)

2008-10-29  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/video-utils.c (totem_time_to_string): Use C_() instead
	of Q_() to separate translation context from strings.
	(Closes: #513627)

2008-10-27  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/tracker/totem-tracker-widget.c
	(totem_tracker_widget_init):
	* src/plugins/youtube/youtube.ui: Harmonise the appearance of the
	YouTube and Local Search sidebars, making them both look like the
	latter. (Closes: #558118)

2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>

	* data/playlist.ui:
	* src/totem-uri.c (totem_add_subtitle): Rename the
	"Select text subtitle..." entry in the playlist popup menu to