@@ -224,7 +224,7 @@
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
-		  <property name="wrap">False</property>
+		  <property name="wrap">True</property>
 		  <property name="selectable">True</property>
 		  <property name="xalign">0</property>
 		  <property name="yalign">0.5</property>
@@ -256,7 +256,7 @@
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
-		  <property name="wrap">False</property>
+		  <property name="wrap">True</property>
 		  <property name="selectable">True</property>
 		  <property name="xalign">0</property>
 		  <property name="yalign">0.5</property>
@@ -288,7 +288,7 @@
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
-		  <property name="wrap">False</property>
+		  <property name="wrap">True</property>
 		  <property name="selectable">True</property>
 		  <property name="xalign">0</property>
 		  <property name="yalign">0.5</property>
@@ -415,7 +415,7 @@
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">False</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
-		  <property name="wrap">False</property>
+		  <property name="wrap">True</property>
 		  <property name="selectable">True</property>
 		  <property name="xalign">0</property>
 		  <property name="yalign">0.5</property>
