@@ -1,5 +1,10 @@
 2008-11-12  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* data/properties.ui: Make the title, album, artist and comment
+	labels wrappable. (Closes: #560511)
+
+2008-11-12  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* src/backend/bacon-video-widget-gst-0.10.c
 	(bacon_video_widget_new): Remove a deprecated GLib symbol.
 	(Closes: #560448)
